--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "expo": "~49.0.11",
-    "expo-linear-gradient": "^12.5.0",
+    "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-gesture-handler": "^2.13.1",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
